--- a/style.css
+++ b/style.css
@@ -22,13 +22,13 @@
 	}
 
 	.nava{
-		width:auto;
-		height:30px;
-		background-color: #3870A4
+		width: 100%;
+	    height: 30px;
+	    display: flex;
+	    background-color: #3870A4;
 	}
 	.nava ul{
 		position: relative;
-		padding-left: 20%;
 		margin:0;
 		list-style: none;
 		padding-left:auto;
@@ -52,11 +52,12 @@
 		background-color: #87E7EB;
 	}
 	.banner{
-		height: 170px
+		height: 170px;
+		display: flex;
 	}
 	.Home{
 		background-color: #60BEFF;
-		width: 24% ;
+		width: 30% ;
 		float: left;
 		height: 170px;
 	}
@@ -70,10 +71,10 @@
 	
 	.navb{
 		background-color: #D4F8F5;
-		width: 22% ;
+		width: 20% ;
 		float: left;
-		height: 580px;
 		margin-right: 0.5%;
+		height: 1300px;
 	}
 	.navb ul{
 		margin: 17px;
@@ -104,7 +105,7 @@
 
 	.Search{
 		background-color: #60BEFF;
-		width: 76%;
+		width: 70%;
 		float: left;
 		height: 170px;
 	}
@@ -142,6 +143,7 @@
 		box-sizing: border-box;
 		background-color: #E3E6E7;
 		margin: 5px;
+		height: 400px;
 	}
 	.iimage img{
 		width: 45%;
@@ -153,6 +155,7 @@
 		padding: 5px 10px;
 		float: right;
 		width: 50%;
+		display: flex;
 	}
 	.danhmuc{
 		width: 70%;
